# Learning-LangChain

./: .env.example  .gitattributes  .gitignore  pyproject.toml  requirements.txt  test_script.py
AI Agent/: first.ipynb
Document Loaders/: 1-intro.ipynb  poem.txt
RAG/: intro.ipynb  yt_chatbot.ipynb
Retrievers/: Contextual_Compression_Retriever.ipynb  Maximal_Marginal_Relevance.ipynb  Multi_Query_Retriever.ipynb  intro.ipynb  vector_store_retriever.ipynb
Runnables/: 1-initial_problem.ipynb  2-solution.ipynb  3-actualRunnable.ipynb  4-RunnablePassthrough.ipynb  5-RunnableBranch.ipynb
Text Splitters/: 1-intro.ipynb  2-Text_structure_based.ipynb
Vector Stores/: intro.ipynb
Vector Stores/chroma_db/: chroma.sqlite3
generativeAI/: 01-intro.ipynb  02-tools.ipynb  03-agent.ipynb  04-agentwithmultipletools.ipynb  05-messages.ipynb  06-StructuredOutput.ipynb  07-memory.ipynb
tools/: Base_tool.ipynb  exchange_rate_tool.ipynb  structured_tools.ipynb
